--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.LovelinePlanner" parent="android:Theme.Material.Light.NoActionBar">
-        <item  name="android:statusBarColor">@color/gold</item>
-    </style>
-
+    <style name="Theme.LovelinePlanner" parent="android:Theme.Material.Light.NoActionBar"/>
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
         <item name="postSplashScreenTheme">@style/Theme.LovelinePlanner</item>
